# traffic_monitor

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
consumer/: Dockerfile  config.py  main.py  redis_client.py
dashboard/: Dockerfile  app.py  requirements.txt
dashboard/static/: base.css  dashboard.css  dashboard.js  login.css
dashboard/templates/: index.html  login.html
openspec/changes/api-traffic-monitor-docs/: design.md  proposal.md  tasks.md
openspec/changes/api-traffic-monitor-docs/specs/api-reference/: spec.md
openspec/changes/api-traffic-monitor-docs/specs/architecture/: spec.md
openspec/changes/api-traffic-monitor-docs/specs/dashboard-design/: spec.md
openspec/changes/api-traffic-monitor-docs/specs/data-models/: spec.md
openspec/changes/api-traffic-monitor-docs/specs/environment-config/: spec.md
openspec/changes/api-traffic-monitor-docs/specs/project-spec/: spec.md
openspec/changes/api-traffic-monitor-docs/specs/task-backlog/: spec.md
proxy/: Dockerfile  auth.py  config.py  constants.py  kafka_producer.py  main.py  rate_limiter.py  redis_client.py
shared/: schemas.py  topics.py
tests/: test_consumer.py  test_lifecycle.py  test_proxy.py  test_rate_limiter.py  test_schemas.py
