[project]
name = "traffic-monitor"
version = "0.1.0"
description = "HTTP reverse proxy that forwards requests to an upstream API and emits traffic events to Kafka for monitoring and analytics"
requires-python = ">=3.14"
dependencies = [
    "aiokafka>=0.13.0",
    "redis>=5.2.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.41.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28.1",
    "ruff>=0.11",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["proxy", "shared"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
